style: add min-width: 0 to fieldset to prevent overflow issues
cc https://github.com/picocss/pico/issues/733#issuecomment-4582148763

--- a/src/_forms.css
+++ b/src/_forms.css
@@ -87,6 +87,7 @@ input:not([type="checkbox"], [type="radio"], [type="range"]) {
 
 fieldset {
   width: 100%;
+  min-width: 0;
   margin: 0;
   margin-bottom: var(--pico-spacing);
   padding: 0;
